[package]
name = "rplag"
version = "0.1.0"
edition = "2018"
authors = ["Rasphino <im.lihh@outlook.com>"]
description = "Rust code plagiarism detector"
repository = "https://github.com/Rasphino/rplag"
readme = "README.md"
keywords = ["plagiarism"]
categories = ["development-tools", "command-line-utilities"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "rplag"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
